arch/canary/service_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-go-v1
      version: v1
  template:
    metadata:
      labels:
        app: hello-go-v1
        version: v1
    spec:
      containers:
        - name: hello-go-v1
          image: khaydarov95/hello-go:v1
          imagePullPolicy: Never
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-v1
spec:
  selector:
    app: hello-go-v1
    version: v1
  ports:
    - protocol: TCP
      port: 8081
      targetPort: web
  type: LoadBalancer
