arch/canary/service_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-go-v2
      version: v2
  template:
    metadata:
      labels:
        app: hello-go-v2
        version: v2
    spec:
      containers:
        - name: hello-go-v2
          image: khaydarov95/hello-go:v2
          imagePullPolicy: Never
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-v2
spec:
  selector:
    app: hello-go-v2
    version: v2
  ports:
    - protocol: TCP
      port: 8081
      targetPort: web
  type: LoadBalancer
